--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -27,7 +27,7 @@
 .footer_text ul{
     display: flex;
     justify-content: center;
-    flex-wrap: wrap;
+    /* flex-wrap: wrap; */
     width: 100%;
     border-top: 1px solid #fff;
     border-bottom: 1px solid #fff;
