--- a/src/Container/Benefit/Benefit.css
+++ b/src/Container/Benefit/Benefit.css
@@ -1,59 +1,83 @@
-.welcome_benefit_head h1{
-    text-align: center;
-    color: #fff;
-    font-size: 65px;
-    font-style: italic;
-    margin-bottom: 60px;
+.benefit_main {
+    padding: 400px 0;
+    position: relative;
 }
 
-.welcome_benefit_head h1 span{
+.benefit_img{
+    position: absolute;
+    left: 40%;
+    top: 40%;
+    width: 1000px;
+    height: 245px;
+    max-width: 250px;
+    background-size: cover;
+    background-position: center;
+}
+
+
+
+.giveMargin{
+    margin-top: 180px;
+}
+
+
+.welcome_benefit_head h1 {
+    text-align: center;
+    color: #fff;
+    font-size: 50px;
+    font-style: italic;
+    margin-bottom: 10px;
+}
+
+.welcome_benefit_head h1 span {
     color: #D9B71A;
 }
 
-.benefit_text{
+.benefit_text {
     display: flex;
     flex-direction: column;
     justify-content: center;
     color: #fff;
-}
-
-.benefit{
-    height: 100vh;
-    display: flex;
-    justify-content: center;
     align-items: center;
 }
 
-.benefit_text h1{
-    font-size: 45px;
+.benefit {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 300px;
+}
+
+.benefit_text h1 {
+    font-size: 33px;
     font-weight: 600;
 }
 
-.benefit_text p{
-    /* max-width: 650px; */
+.benefit_text p {
     word-spacing: 2px;
-    padding-right: 40px;
+    text-align: center;
+    font-size: 20px;
 }
 
-.benefit_img img{
+.benefit_img img {
     width: 460px;
 }
 
-.benefit_img{
+.benefit_img {
     text-align: center;
 }
 
 @media (max-width: 1024px) {
-    .benefit{
+    .benefit {
         height: auto;
     }
 
-    .welcome_benefit_head h1{
+    .welcome_benefit_head h1 {
         font-size: 37px;
         margin-top: 30px;
     }
 
-    .benefit_text h1{
+    .benefit_text h1 {
         font-size: 35px;
     }
 
@@ -62,7 +86,7 @@
         font-size: 13px;
     }
 
-    .benefit_text button{
+    .benefit_text button {
         margin-bottom: 30px;
     }
 }
