--- a/src/Container/Contact/Contact.css
+++ b/src/Container/Contact/Contact.css
@@ -1,6 +1,22 @@
 .contact{
-    margin-top: 80px;
+    padding: 100px 0;
+    position: relative;
 }
+
+.contact::before {
+    content: '';
+    background-image: url('../../assets/images/11.png');
+    position: absolute;
+    left: 50%;
+    top: 65%;
+    width: 100%;
+    height: 191px;
+    max-width: 603px;
+    background-size: cover;
+    background-position: center;
+}
+
+
 
 .contact_section h1{
     color: #fff;
