--- a/src/Container/Home/Home.css
+++ b/src/Container/Home/Home.css
@@ -7,11 +7,11 @@
     padding: 10px 0;
 }
 
-.image1 {
-    background-image: url('../../assets/images/main_bg.jpg') !important;
-    background-size: cover;
-    height: auto !important;
-}
+/* .section1{
+    background-image: url('../../assets/images/final_bg.png');
+    /* background-size: cover; */
+    /* background-attachment: fixed; */
+/* } */ 
 
 
 .mob_view {
