--- a/src/index.css
+++ b/src/index.css
@@ -10,9 +10,9 @@ body {
     font-family: 'Poppins', sans-serif;
 }
 
-.container{
+/* .container{
     max-width: 85%;
-}
+} */
 
 img{
     max-width: 100%;
