--- a/src/index.css
+++ b/src/index.css
@@ -6,8 +6,13 @@
     box-sizing: border-box;
 }
 
+html{
+    scroll-behavior: smooth !important;
+}
+
 body {
     font-family: 'Poppins', sans-serif;
+    overflow-y: scroll !important; 
 }
 
 /* .container{
