--- a/src/Container/Benefit/Benefit.css
+++ b/src/Container/Benefit/Benefit.css
@@ -1,5 +1,5 @@
 .benefit_main {
-    padding: 400px 0;
+    padding: 200px 0;
     position: relative;
 }
 
@@ -14,17 +14,23 @@
     background-position: center;
 }
 
-
-
-.giveMargin{
-    margin-top: 180px;
+.benefit_img1 {
+    position: absolute;
+    left: 0;
+    top: 120px;
+    width: 958px;
+    height: 380px;
+    max-width: 490px;
+    background-size: cover;
+    background-position: center;
 }
+
 
 
 .welcome_benefit_head h1 {
     text-align: center;
     color: #fff;
-    font-size: 50px;
+    font-size: 60px;
     font-style: italic;
     margin-bottom: 10px;
 }
@@ -38,25 +44,23 @@
     flex-direction: column;
     justify-content: center;
     color: #fff;
-    align-items: center;
 }
 
 .benefit {
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-top: 300px;
+    padding: 400px 0;
 }
 
 .benefit_text h1 {
-    font-size: 33px;
+    font-size: 45px;
     font-weight: 600;
 }
 
 .benefit_text p {
-    word-spacing: 2px;
-    text-align: center;
-    font-size: 20px;
+    font-size: 25px;
+    font-weight: 300;
 }
 
 .benefit_img img {
