--- a/src/Container/Diversity/Diversity.css
+++ b/src/Container/Diversity/Diversity.css
@@ -1,32 +1,29 @@
 .diversity_text{
     color: #fff;
-    text-align: center;
-    margin-top: 230px;
 }
 
 .diversity_text p{
-    font-size: 26px;
+    font-size: 25px;
     font-weight: 300;
 }
 
 .diversity {
     color: #fff;
-    margin-top: 200px;
 }
 
 .diversity p{
-    font-size: 21px;
+    font-size: 25px;
     font-weight: 300;
-    text-align: center;
 }
 
 .diversity_main{
     position: relative;
+    padding: 200px 0;
 }
 
 .diversity_img{
     position: absolute;
-    left: -80px;
+    right: -80px;
     width: 1000px;
     height: 220px;
     max-width: 675px;
