--- a/src/Container/Home/Home.css
+++ b/src/Container/Home/Home.css
@@ -1,16 +1,4 @@
-.aspect div {
-    /* background-size: contain !important; */
-     /* position: fixed !important;  */
-        /* background-attachment: scroll; */
-        /* background-position: 0 -300px; */
-        /* background-size: cover; */
-        /* height: 250vh; */
-        /* left: 0; */
-        /* position: fixed; */
-        /* top: 0; */
-        /* width: 100%; */
-        /* z-index: 0; */
-}
+
 
 .top_header {
     background: #73dcff;
@@ -21,11 +9,11 @@
     padding: 10px 0;
 }
 
-/* .section1{
+.section1{
     background-image: url('../../assets/images/final_bg.png');
     background-size: cover;
     background-attachment: fixed;
-} */
+}
 
 
 .mob_view {
