--- a/src/Container/PieceArt/Piece.css
+++ b/src/Container/PieceArt/Piece.css
@@ -1,19 +1,35 @@
 .piece_text {
     color: #fff;
+    position: relative;
+    z-index: 2;
 }
 
-.piece_text p{
-    font-size: 22px;
-    font-weight: 300;
-}
-
-.pieceArt_text{
-    color: #fff;
-    text-align: center;
-    margin-top: 280px;
-}
-
-.pieceArt_text p{
+.piece_text p {
     font-size: 26px;
     font-weight: 300;
+}
+
+.pieceArt_text {
+    color: #fff;
+    text-align: center;
+}
+
+.pieceArt_text p {
+    font-size: 25px;
+    font-weight: 300;
+}
+
+.piece_art {
+    position: relative;
+    padding: 100px 0;
+}
+
+.piece_bg img{
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    height: 350px;
+    max-width: 400px;
+    background-size: cover;
+    background-position: center;
 }
