--- a/src/Container/Benefit/Benefit.css
+++ b/src/Container/Benefit/Benefit.css
@@ -50,7 +50,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 600px 0;
+    padding: 750px 0 550px 0;
 }
 
 .benefit_text h1 {
