--- a/src/Container/Contact/Contact.css
+++ b/src/Container/Contact/Contact.css
@@ -7,11 +7,11 @@
     content: '';
     background-image: url('../../assets/images/11.png');
     position: absolute;
-    left: 50%;
+    left: 0;
     top: 65%;
     width: 100%;
-    height: 191px;
-    max-width: 603px;
+    height: 115px;
+    max-width: 565px;
     background-size: cover;
     background-position: center;
 }
