--- a/src/Container/FooterBee/FooterBee.css
+++ b/src/Container/FooterBee/FooterBee.css
@@ -18,3 +18,14 @@
     font-weight: 300;
     max-width: 900px;
 }
+
+@media (max-width: 767px) {
+    .footerBee_main img {
+        max-width: 275px;
+        width: 100%;
+    }
+
+    .footerBee_main p {
+        font-size: 16px;
+    }
+}
