--- a/src/Container/PieceArt/Piece.css
+++ b/src/Container/PieceArt/Piece.css
@@ -24,7 +24,12 @@
     padding: 250px 0;
 }
 
-.piece_bg img{
+.piece_bg {
+    position: relative;
+    z-index: 1;
+}
+
+.piece_bg img {
     position: absolute;
     right: 0;
     bottom: 0;
@@ -32,4 +37,43 @@
     max-width: 400px;
     background-size: cover;
     background-position: center;
+}
+
+.piece_text {
+    position: relative;
+    z-index: 2;
+}
+
+
+
+@media (max-width: 767px) {
+    .piece_art .first_img {
+        max-width: 275px;
+        margin-bottom: 130px;
+    }
+
+    .piece_text p {
+        font-size: 18px;
+    }
+
+    .piece_bg img {
+        position: absolute;
+        right: 80px;
+        bottom: 0;
+        height: 220px;
+        max-width: 260px;
+        background-size: cover;
+        background-position: center;
+    }
+
+    .piece_text {
+        position: relative;
+        z-index: 2;
+        padding: 20px;
+    }
+
+    .overflow_margin{
+        width: 100%;
+        overflow-x: hidden !important;
+    }
 }
