--- a/src/Container/Utilities/Utilities.css
+++ b/src/Container/Utilities/Utilities.css
@@ -55,3 +55,29 @@
 .elastic_utilities{
     padding-top: 80px;
 }
+
+
+@media (max-width: 767px) {
+    .utility_img {
+        position: absolute;
+        right: 0;
+        top: -100px;
+        width: 1000px;
+        height: 270px;
+        max-width: 350px;
+        background-size: cover;
+        background-position: center;
+    }
+
+    .utilities_main h1 {
+        font-size: 35px;
+    }
+
+    .utilities_main p {
+        font-size: 17px;
+    }
+
+    .elastic_utilities h4 {
+        font-size: 35px;
+    }
+}
