--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,7 @@ html{
 
 body {
     font-family: 'Poppins', sans-serif;
-    overflow-y: scroll !important; 
+    overflow-x: hidden !important; 
 }
 
 /* .container{
