--- a/src/Container/Contact/Contact.css
+++ b/src/Container/Contact/Contact.css
@@ -16,8 +16,6 @@
     background-position: center;
 }
 
-
-
 .contact_section h1{
     color: #fff;
     font-weight: 600;
@@ -37,7 +35,7 @@
 
 .form-control{
     background: transparent !important;
-    border: 3px solid #FFC53C;
+    border: 3px solid #FFC53C !important;
 }
 
 .form-control::placeholder{
@@ -50,7 +48,7 @@ input, textarea{
 
 .form-control:focus{
     box-shadow: none !important;
-    border-color: #FFC53C;
+    border-color: #FFC53C !important;
 }
 
 
