--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -1,3 +1,11 @@
+@media (max-width: 767px) {
+    .navbar {
+        position: fixed !important;
+        width: 100% !important;
+        z-index: 99 !important;
+    }
+}
+
 .navbar-brand img {
     width: 100px;
 }
