--- a/src/Container/Home/Home.css
+++ b/src/Container/Home/Home.css
@@ -75,14 +75,14 @@
 
 
 /* --------------------- header --------------------- */
-.loader-container {
+/* .loader-container {
     height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
-}
+}  */
 
-.loader {
+ /* .loader {
     border: 16px solid #f3f3f3;
     border-top: 16px solid #73dcff;
     border-radius: 50%;
@@ -99,4 +99,50 @@
     100% {
         transform: rotate(360deg);
     }
-}
+} */
+
+
+.loader {
+   position: absolute;
+    top: 50%;
+    left: 50%;
+    width:50px;
+    height:50px;
+    display:inline-block;
+    padding:0px;
+    opacity:0.5;
+    border:3px solid #09acfd;
+    -webkit-animation: loader 1s ease-in-out infinite alternate;
+    animation: loader 1s ease-in-out infinite alternate;
+ }
+ 
+ .loader:before {
+   content: " ";
+   position: absolute;
+   z-index: -1;
+   top: 5px;
+   left: 5px;
+   right: 5px;
+   bottom: 5px;
+   border: 3px solid #09acfd;
+ }
+ 
+ .loader:after {
+   content: " ";
+   position: absolute;
+   z-index: -1;
+   top: 15px;
+   left: 15px;
+   right: 15px;
+   bottom: 15px;
+   border: 3px solid #09acfd;
+ }
+ 
+ @keyframes loader {
+    from {transform: rotate(0deg) scale(1,1);border-radius:0px;}
+    to {transform: rotate(360deg) scale(0, 0);border-radius:50px;}
+ }
+ @-webkit-keyframes loader {
+    from {-webkit-transform: rotate(0deg) scale(1, 1);border-radius:0px;}
+    to {-webkit-transform: rotate(360deg) scale(0,0 );border-radius:50px;}
+ }
