--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -1,8 +1,17 @@
 @media (max-width: 767px) {
-    .navbar {
-        position: fixed !important;
-        width: 100% !important;
-        z-index: 99 !important;
+
+    .is-sticky {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        z-index: 999;
+        box-shadow: 0 2px 24px 0 rgb(0 0 0 / 15%);
+        background-color: #73dcff !important;
+        animation: 500ms ease-in-out 0s normal none 1 running fadeInDown;
+        padding-top: 0px;
+        padding-bottom: 0px;
+        transition: all 0.2s ease;
     }
 
     div#basic-navbar-nav {
@@ -36,3 +45,4 @@
     background-color: #73dcff;
     border: none !important;
 }
+
