--- a/src/Container/Home/Home.css
+++ b/src/Container/Home/Home.css
@@ -1,5 +1,3 @@
-
-
 .top_header {
     background: #73dcff;
 }
@@ -9,19 +7,26 @@
     padding: 10px 0;
 }
 
-.top_header p span:first-child{
+.top_header p span:first-child {
     margin-right: 10px;
 }
 
-.section1{
+.section1 {
+    background-attachment: fixed;
     background-image: url('../../assets/images/final_bg.png');
     background-size: cover;
-    background-attachment: fixed;
+    height: 100vh;
+    left: 0;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: -10;
+
 }
 
 @media (max-width: 767px) {
 
-    .loader{
+    .loader {
         left: 44% !important;
     }
 
@@ -43,35 +48,35 @@
 }
 
 
-.box-c{
-  opacity: 0;
-}
-
-.box-d{
-  opacity: 0;
-}
-
-.piece{
+.box-c {
     opacity: 0;
 }
 
-.bene_head{
+.box-d {
     opacity: 0;
 }
 
-.bene_text{
+.piece {
     opacity: 0;
 }
 
-.divi{
+.bene_head {
     opacity: 0;
 }
 
-.utili{
+.bene_text {
     opacity: 0;
 }
 
-.poi{
+.divi {
+    opacity: 0;
+}
+
+.utili {
+    opacity: 0;
+}
+
+.poi {
     opacity: 0;
 }
 
@@ -86,7 +91,7 @@
     align-items: center;
 }  */
 
- /* .loader {
+/* .loader {
     border: 16px solid #f3f3f3;
     border-top: 16px solid #73dcff;
     border-radius: 50%;
@@ -107,46 +112,61 @@
 
 
 .loader {
-   position: absolute;
+    position: absolute;
     top: 50%;
     left: 50%;
-    width:50px;
-    height:50px;
-    display:inline-block;
-    padding:0px;
-    opacity:0.5;
-    border:3px solid #09acfd;
+    width: 50px;
+    height: 50px;
+    display: inline-block;
+    padding: 0px;
+    opacity: 0.5;
+    border: 3px solid #09acfd;
     -webkit-animation: loader 1s ease-in-out infinite alternate;
     animation: loader 1s ease-in-out infinite alternate;
- }
- 
- .loader:before {
-   content: " ";
-   position: absolute;
-   z-index: -1;
-   top: 5px;
-   left: 5px;
-   right: 5px;
-   bottom: 5px;
-   border: 3px solid #09acfd;
- }
- 
- .loader:after {
-   content: " ";
-   position: absolute;
-   z-index: -1;
-   top: 15px;
-   left: 15px;
-   right: 15px;
-   bottom: 15px;
-   border: 3px solid #09acfd;
- }
- 
- @keyframes loader {
-    from {transform: rotate(0deg) scale(1,1);border-radius:0px;}
-    to {transform: rotate(360deg) scale(0, 0);border-radius:50px;}
- }
- @-webkit-keyframes loader {
-    from {-webkit-transform: rotate(0deg) scale(1, 1);border-radius:0px;}
-    to {-webkit-transform: rotate(360deg) scale(0,0 );border-radius:50px;}
- }
+}
+
+.loader:before {
+    content: " ";
+    position: absolute;
+    z-index: -1;
+    top: 5px;
+    left: 5px;
+    right: 5px;
+    bottom: 5px;
+    border: 3px solid #09acfd;
+}
+
+.loader:after {
+    content: " ";
+    position: absolute;
+    z-index: -1;
+    top: 15px;
+    left: 15px;
+    right: 15px;
+    bottom: 15px;
+    border: 3px solid #09acfd;
+}
+
+@keyframes loader {
+    from {
+        transform: rotate(0deg) scale(1, 1);
+        border-radius: 0px;
+    }
+
+    to {
+        transform: rotate(360deg) scale(0, 0);
+        border-radius: 50px;
+    }
+}
+
+@-webkit-keyframes loader {
+    from {
+        -webkit-transform: rotate(0deg) scale(1, 1);
+        border-radius: 0px;
+    }
+
+    to {
+        -webkit-transform: rotate(360deg) scale(0, 0);
+        border-radius: 50px;
+    }
+}
