--- a/src/Container/Home/Home.css
+++ b/src/Container/Home/Home.css
@@ -15,7 +15,7 @@
     background-attachment: fixed;
     background-image: url('../../assets/images/final_bg.png');
     background-size: cover;
-    height: 100vh;
+    height: 100%;
     left: 0;
     position: fixed;
     top: 0;
