--- a/src/Container/Home/Home.css
+++ b/src/Container/Home/Home.css
@@ -12,7 +12,7 @@
 }
 
 .section1 {
-    background-attachment: fixed;
+    /* background-attachment: fixed;
     background-image: url('../../assets/images/final_bg.png');
     background-size: cover;
     height: 100%;
@@ -21,8 +21,29 @@
     top: 0;
     width: 100%;
     z-index: -10;
-    min-height: 1000px;
+    min-height: 1000px; */
 
+}
+
+div#root::before {
+    background-attachment: fixed;
+    background-image: url('../../assets/images/final_bg.png') !important;
+    background-size: cover !important;
+    height: 100%;
+    left: 0;
+    min-height: 1000px;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: -1;
+    content: '';
+    height: 500px;
+    background: black;
+    width: 100%;
+}
+
+div#root {
+    position: relative;
 }
 
 @media (max-width: 767px) {
