--- a/src/Container/Home/Home.css
+++ b/src/Container/Home/Home.css
@@ -27,7 +27,7 @@
 
 div#root::before {
     background-attachment: fixed;
-    background-image: url('../../assets/images/final_bg.png') !important;
+    /* background-image: url('../../assets/images/final_bg.png'); */
     background-size: cover !important;
     height: 100%;
     left: 0;
