--- a/src/Container/Home/Home.css
+++ b/src/Container/Home/Home.css
@@ -11,8 +11,8 @@
     margin-right: 10px;
 }
 
-.section1 {
-    /* background-attachment: fixed;
+/* .section1 { */
+/* background-attachment: fixed;
     background-image: url('../../assets/images/final_bg.png');
     background-size: cover;
     height: 100%;
@@ -22,12 +22,11 @@
     width: 100%;
     z-index: -10;
     min-height: 1000px; */
-
-}
+/* } */
 
 div#root::before {
     background-attachment: fixed;
-     background-image: url('../../assets/images/final_bg.png'); 
+    background-image: url('../../assets/images/final_bg.png');
     background-size: cover !important;
     height: 100%;
     left: 0;
@@ -48,15 +47,15 @@ div#root {
 
     div#root::before {
         background-attachment: scroll;
-    height: 100%;
-    left: 0;
-    min-height: 1000px;
-    position: fixed;
-    top: 0;
-    width: 100%;
-    z-index: -1;
-    bottom: 0;
-    padding-bottom: 500px;
+        height: 1000px;
+        left: 0;
+        min-height: 1000px;
+        position: fixed;
+        top: 0;
+        width: 100%;
+        z-index: -1;
+        bottom: 0;
+        padding-bottom: 500px;
     }
 
     .loader {
