--- a/src/Container/Home/Home.css
+++ b/src/Container/Home/Home.css
@@ -47,7 +47,7 @@ div#root {
 
     div#root::before {
         background-attachment: scroll;
-        height: 1000px;
+        height: 100%;
         left: 0;
         min-height: 1000px;
         position: fixed;
