--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,7 @@ html{
 
 body {
     font-family: 'Poppins', sans-serif;
-    background: #11ccf8;
+    background: #00212c;
     min-height: 10000px;
 }
 
