--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -1,11 +1,11 @@
 @media (max-width: 767px) {
 
-    .is-sticky {
+    .header-section {
         position: fixed;
         top: 0;
         left: 0;
         width: 100%;
-        z-index: 999;
+        z-index: 100;
         box-shadow: 0 2px 24px 0 rgb(0 0 0 / 15%);
         background-color: #73dcff !important;
         animation: 500ms ease-in-out 0s normal none 1 running fadeInDown;
@@ -19,21 +19,6 @@
         padding: 12px !important;
     }
 
-    .mob {
-        display: block !important;
-    }
-
-    .web {
-        display: none !important;
-    }
-}
-
-.mob {
-    display: none;
-}
-
-.web {
-    display: block;
 }
 
 .navbar-brand img {
