--- a/src/index.css
+++ b/src/index.css
@@ -53,7 +53,7 @@ body .loading-overlay {
     display: flex;
     align-items: center;
     white-space: nowrap;
-    background-color: #fff;
+    background-color: #00212c;
     color: white;
     overflow: hidden;
     justify-content: center;
