--- a/src/Container/Benefit/Benefit.css
+++ b/src/Container/Benefit/Benefit.css
@@ -40,9 +40,9 @@
 }
 
 .benefit_text {
-    display: flex;
+    /* display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: center; */
     color: #fff;
 }
 
