--- a/src/Container/FooterBee/FooterBee.css
+++ b/src/Container/FooterBee/FooterBee.css
@@ -1,10 +1,11 @@
 .footerBee_main{
-    height: 85vh;
+    /* height: 85vh;
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: center; */
     color: #fff;
-    flex-direction: column;
+    /* flex-direction: column; */
+    padding: 200px 0;
 }
 
 .footerBee_main img{
@@ -16,7 +17,7 @@
     text-align: center;
     font-size: 25px;
     font-weight: 300;
-    max-width: 900px;
+    /* max-width: 900px; */
 }
 
 @media (max-width: 767px) {
