--- a/src/Container/Utilities/Utilities.css
+++ b/src/Container/Utilities/Utilities.css
@@ -21,11 +21,12 @@
     font-weight: 600;
     text-align: center;
     text-transform: uppercase;
+    font-style: italic;
 }
 
 .utilities_main p {
     font-size: 25px;
-    font-weight: 300;
+    font-weight: 500;
     text-align: center;
 }
 
@@ -43,13 +44,14 @@
 .utilities_text p {
     text-align: center;
     font-size: 25px;
-    font-weight: 300;
+    font-weight: 500;
 }
 
 .elastic_utilities h4{
     font-size: 45px;
     text-transform: uppercase;
     font-weight: 600;
+    font-style: italic;
 }
 
 .elastic_utilities{
