--- a/src/Container/Diversity/Diversity.css
+++ b/src/Container/Diversity/Diversity.css
@@ -9,6 +9,9 @@
 
 .diversity {
     color: #fff;
+    z-index: 2;
+    position: relative;
+    padding: 300px 0 100px 0;
 }
 
 .diversity p {
@@ -24,8 +27,8 @@
     position: absolute;
     right: -80px;
     width: 1000px;
-    height: 220px;
-    max-width: 675px;
+    height: 350px;
+    max-width: 700px;
     background-size: cover;
     background-position: center;
 }
@@ -60,5 +63,9 @@
 
     .give_overflow{
         margin-top: 150px;
+    }
+
+    .diversity{
+        padding: 100px 0 100px 0;
     }
 }
