--- a/src/Container/Utilities/Utilities.css
+++ b/src/Container/Utilities/Utilities.css
@@ -54,6 +54,10 @@
     font-style: italic;
 }
 
+.elastic_utilities h4 span{
+    color: #D9B71A;
+}
+
 .elastic_utilities{
     padding-top: 80px;
 }
