--- a/src/Container/Points/Points.css
+++ b/src/Container/Points/Points.css
@@ -65,6 +65,7 @@
         max-width: 360px;
         background-size: cover;
         background-position: center;
+        opacity: 0.6;
     }
 
     .point_img2 {
