--- a/src/index.css
+++ b/src/index.css
@@ -6,9 +6,9 @@
     box-sizing: border-box;
 }
 
-html {
+/* html {
     scroll-behavior: smooth !important;
-}
+} */
 
 body {
     font-family: 'Poppins', sans-serif;
