--- a/src/Container/Diversity/Diversity.css
+++ b/src/Container/Diversity/Diversity.css
@@ -11,7 +11,7 @@
     color: #fff;
     z-index: 2;
     position: relative;
-    padding: 300px 0 100px 0;
+    padding: 100px 0 100px 0;
 }
 
 .diversity p {
@@ -26,6 +26,7 @@
 .diversity_img {
     position: absolute;
     right: -80px;
+    top: 250px;
     width: 1000px;
     height: 350px;
     max-width: 700px;
@@ -33,8 +34,25 @@
     background-position: center;
 }
 
+.web {
+    display: block;
+}
+
+.mob {
+    display: none;
+}
+
 
 @media (max-width: 767px) {
+
+    .web {
+        display: none;
+    }
+
+    .mob {
+        display: block;
+    }
+
     .diversity_img {
         position: absolute;
         right: 10px;
@@ -46,7 +64,7 @@
         background-position: center;
     }
 
-    .diver_col_img{
+    .diver_col_img {
         width: 320px;
         margin-bottom: 170px;
     }
@@ -57,15 +75,15 @@
 
     .diversity p {
         font-size: 16px;
-        font-weight: 300;
         padding: 20px;
+        padding-top: 50px;
     }
 
-    .give_overflow{
+    .give_overflow {
         margin-top: 150px;
     }
 
-    .diversity{
+    .diversity {
         padding: 100px 0 100px 0;
     }
 }
