--- a/src/Container/Home/Home.css
+++ b/src/Container/Home/Home.css
@@ -128,6 +128,22 @@ div#root {
     opacity: 0;
 }
 
+.pieceMob{
+    opacity: 0;
+}
+
+.bene2{
+    opacity: 0;
+}
+
+.divi2{
+    opacity: 0;
+}
+
+.poi2{
+    opacity: 0;
+}
+
 /* --------------------- */
 
 
